src/styles/_includes/components/_modal.scss
.modal {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  background-color: $white;
  z-index: 9;
  align-items: center;
  display: none;
  justify-content: center;

  &__container {
    padding-left: 11px;
    padding-right: 11px;
    overflow-y: scroll;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    padding: 0;
    margin: 0;
    max-width: 100%;
  }

  &__block {
    height: 100%;
    width: 100%;
    position: relative;
    text-align: center;
    margin-left: auto;
    margin-right: auto;

    // VARIATIONS
    &--close {
      position: absolute;
      top: 0;
      right: 0;
      left: 0;
      z-index: 10;
      height: auto;
      padding: 20px 0 0;
      background-color: transparent;
      box-shadow: none;
      min-width: auto;
      max-width: $site-content-width;
      width: 100%;
      margin: 0 auto;
    }

    &--inner {
      max-height: none;
      text-align: center;
      box-shadow: none;
      min-width: 1px;
    }

    &--outer {
      max-height: none;
    }
  }

  &__button {
    appearance: none;
    min-width: 160px;

    // VARIATIONS
    &--close {
      width: 28px;
      height: 28px;
      padding: 0;
      border: 0;
      display: flex;
      justify-content: center;
      background-color: transparent;
      min-width: 0;
      margin-left: auto;
      margin-right: 20px;

      &:focus {
        outline: none;
      }

      &:hover {
        .modal__span {
          &::after,
          &::before {
            background-color: $rev-yellow;
          }
        }
      }
    }
  }

  &__span {
    @extend .close-icon;
    border-color: $rev-light-blue;

    &::after,
    &::before {
      background-color: $rev-light-blue;
    }
  }
}

.modal--open .header {
  z-index: 9;
}

.modal--open.tray--expanded .header {
  z-index: 11;
}

